# grokking

./: README.md  pyproject.toml
grokking/: config.py  data.py  model.py  train.py
scripts/: analysis.py  baseline.py  count_parameters.py  figures.py  relative_power.py
